--- a/main.html
+++ b/main.html
@@ -3,10 +3,12 @@
 <html>
 
 <head>
+	
 	<link rel="stylesheet" href="./styles.css">
 </head>
 
 <body>
+	<center><h1>Welcome to the new Era of Artificial intelligence</h1></center>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
